--- a/stats.ipynb
+++ b/stats.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 509,
    "id": "0b6a6a51",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 510,
    "id": "641d7722",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 511,
    "id": "d7e430e6",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 512,
    "id": "9cacd375",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 513,
    "id": "a62fbc45",
    "metadata": {},
    "outputs": [],
@@ -120,18 +120,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 514,
    "id": "cb1e4a9b",
    "metadata": {},
    "outputs": [],
    "source": [
     "results = []\n",
     "current_entry = None\n",
-    "participants_set = set(participants)  # use set for faster lookup\n",
     "\n",
-    "# patrón para inicio de mensaje de WhatsApp\n",
+    "# pattern to match the start of a WhatsApp message\n",
     "start_pattern = re.compile(r\"^(\\d{1,2}/\\d{1,2}/\\d{4}), (\\d{1,2}:\\d{2}) - (.*?): (.*)\")\n",
-    "points_pattern = re.compile(r\"^(.+?)\\s*:\\s*(\\d+)$\")\n",
+    "points_pattern = re.compile(r\"^(.+?)\\s*:\\s*(\\d+)$\")  # pattern for lines with name: points\n",
     "\n",
     "for line in raw_data:\n",
     "    line = line.replace('\\xa0', ' ').strip()\n",
@@ -139,7 +138,7 @@
     "    start_match = start_pattern.match(line)\n",
     "\n",
     "    if start_match:\n",
-    "        # nuevo mensaje: guarda fecha, hora y autor\n",
+    "        # new message: extract date, time, author\n",
     "        date_str, time_str, author, content = start_match.groups()\n",
     "        timestamp = datetime.strptime(f\"{date_str} {time_str}\", \"%d/%m/%Y %H:%M\")\n",
     "\n",
@@ -150,25 +149,26 @@
     "        }\n",
     "        results.append(current_entry)\n",
     "\n",
-    "        # si el contenido también es un puntaje, procesar aquí\n",
+    "        # check if message content itself is a points entry\n",
     "        inline_points = points_pattern.match(content)\n",
     "        if inline_points:\n",
     "            name, pts = inline_points.groups()\n",
-    "            if name in participants_set:\n",
+    "            if name in participants:\n",
     "                current_entry[\"points\"][name] = int(pts)\n",
     "\n",
     "    elif current_entry:\n",
-    "        # posibles líneas con puntos adicionales\n",
+    "        # check for additional lines with name: points\n",
     "        point_match = points_pattern.match(line)\n",
     "        if point_match:\n",
     "            name, pts = point_match.groups()\n",
-    "            if name in participants_set:\n",
-    "                current_entry[\"points\"][name] = int(pts)\n"
+    "            if name in participants:\n",
+    "                current_entry[\"points\"][name] = int(pts)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 515,
    "id": "a9d28e9e",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 516,
    "id": "e7d1c727",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 517,
    "id": "b939027d",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 518,
    "id": "02d0a3ba",
    "metadata": {},
    "outputs": [
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 519,
    "id": "c986d7c2",
    "metadata": {},
    "outputs": [],
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 520,
    "id": "83738a66",
    "metadata": {},
    "outputs": [
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 521,
    "id": "a7fc8f14",
    "metadata": {},
    "outputs": [
